--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,6 +19,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 18
+    - run: npm ci
+    - run: npm test
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -28,6 +33,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install Speccy
+      run: |
+        npm install speccy
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
