--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,14 +27,19 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - uses: docker-practice/actions-setup-docker@master
+      timeout-minutes: 12
+    - run: |
+        docker version
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Install Speccy
+    - name: Install speccy
       run: |
-        npm install speccy
+        docker pull wework/speccy:dependabot-bundler-docs-nokogiri-1.13.6
+        docker run wework/speccy:dependabot-bundler-docs-nokogiri-1.13.6
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
