--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -49,7 +49,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Build packages
       run: |
-        speccy resolve
+        python build.py
     - name: Test with pytest
       run: |
         pytest
